--- a/translate/src/main/resources/config.yaml
+++ b/translate/src/main/resources/config.yaml
@@ -37,6 +37,7 @@ chatGPT:
   host:       "api.openai.com"
   port:       "443"
   apiVersion: "v1"
+  model:      "gpt-3.5-turbo"
   resource:   "chat/completions"
   url:        "${chatGPT.protocol}://${chatGPT.host}:${chatGPT.port}/${chatGPT.apiVersion}/${chatGPT.resource}"
 
